# rssn-dylib

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.gitea/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: mod.rs  physics_sim.rs  prelude.rs  rssn_benches.rs
benches/numerical/: calculus.rs  calculus_of_variations.rs  combinatorics.rs  complex_analysis.rs  computer_graphics.rs  convergence.rs  coordinates.rs  differential_geometry.rs  elementary.rs  error_correction.rs  finite_field.rs  fractal_geometry_and_chaos.rs  functional_analysis.rs  geometric_algebra.rs  graph.rs  integrate.rs  interpolate.rs  matrix.rs  mod.rs  multi_valued.rs  number_theory.rs  ode.rs  optimize.rs  pde.rs  physics.rs  physics_cfd.rs  physics_fea.rs  physics_md.rs  polynomial.rs  real_roots.rs  series.rs  signal.rs  solve.rs  sparse.rs  special.rs  stats.rs  tensor.rs  testing.rs  topology.rs  transforms.rs  (+2 more)
benches/output/: io.rs  latex.rs  mod.rs  plotting.rs  pretty_print.rs  typst.rs
benches/physics/: mod.rs  physics_bem.rs  physics_cnm.rs  physics_em.rs  physics_fdm.rs  physics_fem.rs  physics_fvm.rs  physics_mm.rs  physics_mtm.rs  physics_rkm.rs  physics_sm.rs
benches/plugins/: mod.rs
benches/symbolic/: cad.rs  calculus.rs  calculus_of_variations.rs  cas_foundations.rs  classical_mechanics.rs  combinatorics.rs  complex_analysis.rs  computer_graphics.rs  convergence.rs  coordinates.rs  core.rs  cryptography.rs  differential_geometry.rs  discrete_groups.rs  electromagnetism.rs  elementary.rs  error_correction.rs  error_correction_helper.rs  finite_field.rs  fractal_geometry_and_chaos.rs  functional_analysis.rs  geometric_algebra.rs  graph.rs  graph_algorithms.rs  graph_isomorphism_and_coloring.rs  graph_operations.rs  grobner.rs  group_theory.rs  integral_equations.rs  integration.rs  lie_groups_and_algebras.rs  logic.rs  matrix.rs  mod.rs  multi_valued.rs  number_theory.rs  numeric.rs  ode.rs  optimize.rs  pde.rs  (+26 more)
examples/fortran/: rssn.dll.lib  test.f90
src/: ffi_api.rs  lib.rs  prelude.rs
src/numerical/: calculus.rs  calculus_of_variations.rs  combinatorics.rs  complex_analysis.rs  computer_graphics.rs  convergence.rs  coordinates.rs  differential_geometry.rs  elementary.rs  graph.rs  (+32 more)
tests/: mod.rs  prelude.rs  regression_test.rs
(+235 files in other folders)
